--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
+        <style>
+            .reveal ul{
+                list-style-type: none;
+                margin: 0;
+            }
+        </style>
 		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
 			if( window.location.search.match( /print-pdf/gi ) ) {
@@ -50,11 +56,16 @@
 					</p>
 				</section>
 
+                <section>
+                    <h2>Vem är jag?</h2>
+                </section>
+
 				<section>
 					<h2>Vad är PHP?</h2>
-					<p>
-						Serverscripts... bla bla.
-					</p>
+					<blockquote>
+                        PHP är open source[...], det används flitigt på webben för att skapa dynamiska webbsidor och är enkelt att lära sig. Det är dessutom gratis. Till skillnad från HTML och CSS, som är markup-språk och inte programspråk, är PHP ett programspråk som tillåter logiska operationer. Det innebär att du kan använda språket för att lösa olika problem och uppgifter om du lär dig syntaxen.
+					</blockquote>
+                    <small>(http://webbdesigna.se/php.php)</small>
 
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
@@ -62,30 +73,28 @@
 				</section>
 
 				<!-- Example of nested vertical slides -->
-				<section>
-                    <section>
+				<section id="fragments">
+
                     <h2>Hur använder jag det?</h2>
                         <p>
-                            Apacheserver -> lägg in länk till apache.org
-                            <ul>
-                                <li>XAMPP (Windows)</li>
-                                <li>??? (Mac)</li>
-                                <li>??? Linux</li>
-                            </ul>
+                            <a href="http://www.apache.org/">Apacheservern</a>
+
+                            <a href="https://www.apachefriends.org/download.html">XAMPP fungerar på alla plattformar!</a>
                         </p>
-                    </section>
-                    <section>
-                        Filändelsen .php
-                    </section>
-                    <section>
-                        Texteditor? Valfri!
-                    </section>
+                   <p class="fragment" data-fragment-index="0">
+                       Filändelsen .php
+                   </p>
+
+                    <p class="fragment" data-fragment-index="1">
+                        Texteditor
+                    </p>
+
+
 				</section>
 
 				<section>
 					<h2>Strukturera ditt dokument!</h2>
 					<p>
-                        Lägg in HTML-dokument
                         <iframe src="sourcecode/source.php?path=demo/stage1.html" width="1000" height="600"></iframe>
 					</p>
 				</section>
@@ -117,7 +126,54 @@
                     <iframe src="sourcecode/source.php?path=demo/stage3.html" width="1000" height="600"></iframe>
                 </section>
 
+                <section>
+                    <section>
+                        <h2>Dynamiska element</h2>
+                        <iframe src="sourcecode/source.php?path=demo/header.html" width="1000" height="600"></iframe>
+                    </section>
+                    <section>
+                        <h2>Variabler</h2>
+                        <iframe src="sourcecode/source.php?path=demo/stage3.html" width="1000" height="600"></iframe>
+                    </section>
+                    <section>
+                        <h2>Variabler</h2>
+                        <iframe src="sourcecode/source.php?path=demo/stage4.html" width="1000" height="600"></iframe>
+                    </section>
+                    <section>
+                        <h2>Header.php</h2>
+                        <iframe src="sourcecode/source.php?path=demo/header.html" width="1000" height="600"></iframe>
+                    </section>
+                    <section>
+                        <h2>Header.php</h2>
+                        <iframe src="sourcecode/source.php?path=demo/header2.html" width="1000" height="600"></iframe>
+                    </section>
+                </section>
+                <section>
+                    <h2>Hur ser mappen ut?</h2>
 
+                    <ul>
+                        <h4>www/</h4>
+                        <li>
+                         header.php
+                        </li>
+                        <li>
+                            footer.php
+                        </li>
+                        <li>
+                            index.php
+                        </li>
+                        <li>
+                            about.php
+                        </li>
+                        <li>
+                            contact.php
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Resultat</h2>
+                    <iframe src="sourcecode/source.php?path=demo/stage4.html" width="1000" height="600"></iframe>
+                </section>
 			</div>
 
 		</div>
