--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
 
 				</section>
 
+                <section>
+                    <p>
+                        <iframe src="sourcecode/source.php?path=demo/stage1.html" width="1000" height="600"></iframe>
+                    </p>
+                </section>
+
 				<section>
 					<h2>Flytta ut kod</h2>
                     <iframe src="sourcecode/source.php?path=demo/header.html" width="1000" height="600"></iframe>
@@ -173,6 +179,8 @@
                 <section>
                     <h2>Resultat</h2>
                     <iframe src="sourcecode/source.php?path=demo/stage4.html" width="1000" height="600"></iframe>
+                </section>
+                <section>
                 </section>
 			</div>
 
